--- a/css/addTaskResponsive.css
+++ b/css/addTaskResponsive.css
@@ -14,6 +14,10 @@
         margin-left: 270px;
         padding-right: 46px;
         padding-top: 110px;
+        height: calc(100vh - 96px);
+        height: calc(100svh - 96px);
+        overflow-y: auto;
+        padding-bottom: 24px;
     }
 
 
@@ -141,6 +145,7 @@
     .add-task-content {
         margin-top: 80px;
         height: calc(100vh - 160px);
+        height: calc(100svh - 160px);
         margin-left: 0;
         padding-bottom: 24px;
         padding-top: 0px;
@@ -226,17 +231,18 @@
     .footer {
         display: flex;
         justify-content: space-between;
-        width: 99%;
+        /* width: 99%; */
         height: 74px;
         padding: 20px 50px;
         position: fixed;
-        bottom: 81px;
+        bottom: 80px;
         left: 0;
         right: 0;
         align-items: center;
         background-color: #F6F7F8;
         gap: 12px;
         z-index: 100;
+        width: calc(100% - 8px);
     }
 
     .add-task-content h1 {
@@ -254,7 +260,8 @@
         right: 0;
         top: 80px;
         background-color: #F6F7F8;
-        width: 99%;
+        /* width: 99%; */
+        margin-right: 10px;
         z-index: 2;
     }
 
